Fix label associations

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,20 +31,20 @@
       <form method="post">
         <div class="grid">
           <div>
-            <label>キーワード</label>
-            <input name="keyword" value="貸し別荘" />
+            <label for="keyword">キーワード</label>
+            <input id="keyword" name="keyword" value="貸し別荘" />
           </div>
           <div>
-            <label>取得件数/ページ（最大30）</label>
-            <input name="hits" value="30" />
+            <label for="hits">取得件数/ページ（最大30）</label>
+            <input id="hits" name="hits" value="30" />
           </div>
           <div>
-            <label>最大ページ数（最大100）</label>
-            <input name="max_pages" value="10" />
+            <label for="max_pages">最大ページ数（最大100）</label>
+            <input id="max_pages" name="max_pages" value="10" />
           </div>
           <div>
-            <label>リクエスト間隔（秒）</label>
-            <input name="sleep" value="0.5" />
+            <label for="sleep">リクエスト間隔（秒）</label>
+            <input id="sleep" name="sleep" value="0.5" />
           </div>
         </div>
         <button type="submit">CSVをダウンロード</button>
